[project]
name = "comfyui-musetalkutils"
description = "MuseTalk ComfyUI Preprocess and Postprocess Nodes"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/xuhongming251/ComfyUI-MuseTalkUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MuseTalkUtils"
Icon = ""
